--- a/modelo-vitrine/index.html
+++ b/modelo-vitrine/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitrine Digital</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vitrine Digital</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="loja-info">
-            <img id="logo-loja" src="" alt="Logo da Loja" style="display:none;">
-            <h1 id="nome-loja">Minha Loja</h1>
-            <p id="contato-loja"></p>
-        </div>
-        <p>Catálogo interativo de produtos</p>
-    </header>
-    <main>
-        <div id="produtos" class="produtos-container">
-            <!-- Cards de produtos serão renderizados aqui -->
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2025 Vitrine Digital</p>
-    </footer>
-    <script src="script.js"></script>
+  <header>
+    <div class="loja-info">
+      <img id="logo-loja" src="" alt="Logo da Loja" style="display: none;" />
+      <h1 id="nome-loja">Nome da Loja</h1>
+      <p id="contato-loja"></p>
+    </div>
+    <p class="slogan">Catálogo interativo de produtos</p>
+  </header>
+
+  <main>
+    <section id="produtos" class="produtos-container">
+      <!-- Produtos serão carregados dinamicamente aqui -->
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Vitrine Digital | Desenvolvido por Jackob</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
